[gd_scene load_steps=30 format=3 uid="uid://cg3d3oyimla3v"]

[ext_resource type="Script" uid="uid://n6naubd41nss" path="res://src/actors/player/ui/player_stats_ui.gd" id="1_3g0kp"]
[ext_resource type="Texture2D" uid="uid://en2ws0o3r862" path="res://assets/ui/user_interface.png" id="2_nanys"]
[ext_resource type="FontFile" uid="uid://0guru8qhjqfm" path="res://assets/fonts/ari-w9500.ttf" id="4_j6y77"]
[ext_resource type="LabelSettings" uid="uid://ypxn7vvltx0x" path="res://src/ui/themes/label_settings.tres" id="5_3n3nu"]
[ext_resource type="Texture2D" uid="uid://cw0oacjh3btgt" path="res://assets/ui/knight_portrait.png" id="5_nanys"]
[ext_resource type="Shader" uid="uid://be3ok0qckphnj" path="res://src/shaders/flash_bar.tres" id="6_dyclp"]
[ext_resource type="PackedScene" uid="uid://cm3ky74r1wujk" path="res://src/actors/player/ui/player_status_effect_list_ui.tscn" id="6_squ0m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3n3nu"]
atlas = ExtResource("2_nanys")
region = Rect2(25, 112, 144, 136)

[sub_resource type="Gradient" id="Gradient_nanys"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.156863, 0.156863, 0.168627, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_squ0m"]
gradient = SubResource("Gradient_nanys")
width = 8
height = 96

[sub_resource type="Gradient" id="Gradient_65wfi"]
colors = PackedColorArray(0.333333, 0.831373, 0, 1, 0.546174, 0.911802, 0.882732, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l0fju"]
gradient = SubResource("Gradient_65wfi")
width = 8
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g0kp"]
atlas = ExtResource("2_nanys")
region = Rect2(181, 120, 53, 48)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3g0kp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nanys"]
texture = ExtResource("2_nanys")
texture_margin_left = 16.0
texture_margin_right = 24.0
region_rect = Rect2(48, 336, 300, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ffnjg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j4jm5"]
texture = ExtResource("2_nanys")
texture_margin_left = 16.0
texture_margin_right = 24.0
region_rect = Rect2(48, 452, 300, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j6y77"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qd2a2"]
texture = ExtResource("2_nanys")
texture_margin_left = 16.0
texture_margin_right = 24.0
region_rect = Rect2(48, 356, 300, 16)

[sub_resource type="LabelSettings" id="LabelSettings_ffnjg"]
font = ExtResource("4_j6y77")
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4jm5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j6y77"]
texture = ExtResource("2_nanys")
texture_margin_left = 16.0
texture_margin_right = 24.0
region_rect = Rect2(48, 388, 300, 16)

[sub_resource type="LabelSettings" id="LabelSettings_3n3nu"]
font = ExtResource("4_j6y77")
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_65wfi"]
shader = ExtResource("6_dyclp")
shader_parameter/BooleanParameter = false
shader_parameter/ColorParameter = Color(0.666667, 0.192157, 0.192157, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qd2a2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x8e1k"]
texture = ExtResource("2_nanys")
texture_margin_left = 16.0
texture_margin_right = 26.0
region_rect = Rect2(48, 420, 300, 16)

[sub_resource type="Animation" id="Animation_dyclp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/EnergyControl/ProgressBar:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l0fju"]
resource_name = "energy_bar_warning"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/EnergyControl/ProgressBar:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kohvm"]
_data = {
&"RESET": SubResource("Animation_dyclp"),
&"energy_bar_warning": SubResource("Animation_l0fju")
}

[node name="StatsUI" type="Control" groups=["player_stats_ui"]]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_3g0kp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Border" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 3
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = SubResource("AtlasTexture_3n3nu")
expand_mode = 3
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_nanys")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ExpControl" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/ExpControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -96.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
value = 14.0
fill_mode = 3
texture_under = SubResource("GradientTexture2D_squ0m")
texture_progress = SubResource("GradientTexture2D_l0fju")
texture_progress_offset = Vector2(0, 32)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
texture_filter = 3
layout_mode = 2
texture = SubResource("AtlasTexture_3g0kp")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
texture_filter = 3
layout_mode = 2
texture = SubResource("AtlasTexture_3g0kp")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HealthControl" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HealthControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_3g0kp")
theme_override_styles/fill = SubResource("StyleBoxTexture_nanys")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ProgressBarBG" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HealthControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_ffnjg")
theme_override_styles/fill = SubResource("StyleBoxTexture_j4jm5")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HealthControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_j6y77")
theme_override_styles/fill = SubResource("StyleBoxTexture_qd2a2")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HealthControl"]
visible = false
texture_filter = 3
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 49.75
offset_bottom = 48.5
scale = Vector2(0.25, 0.25)
text = "HP"
label_settings = SubResource("LabelSettings_ffnjg")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Points" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/HealthControl"]
visible = false
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.566
anchor_top = 0.525
anchor_right = 0.566
anchor_bottom = 0.525
offset_left = -53.4479
offset_top = -5.39999
offset_right = 481.552
offset_bottom = 48.6
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
text = "999.999/999.999"
label_settings = ExtResource("5_3n3nu")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ManaControl" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/ManaControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_3g0kp")
theme_override_styles/fill = SubResource("StyleBoxTexture_nanys")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ProgressBarBG" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/ManaControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_ffnjg")
theme_override_styles/fill = SubResource("StyleBoxTexture_j4jm5")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/ManaControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_j4jm5")
theme_override_styles/fill = SubResource("StyleBoxTexture_j6y77")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Points" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/ManaControl"]
visible = false
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.566524
anchor_top = 2.42501
anchor_right = 0.566524
anchor_bottom = 2.42501
offset_left = -53.4479
offset_top = -20.7334
offset_right = 481.552
offset_bottom = 33.2666
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
text = "999.999/999.999"
label_settings = ExtResource("5_3n3nu")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/ManaControl"]
visible = false
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03125
anchor_top = 0.1875
anchor_right = 0.117188
anchor_bottom = 0.828122
offset_right = 33.0
offset_bottom = 30.75
scale = Vector2(0.25, 0.25)
text = "MP"
label_settings = SubResource("LabelSettings_3n3nu")
justification_flags = 171
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="EnergyControl" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureProgress" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/EnergyControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_3g0kp")
theme_override_styles/fill = SubResource("StyleBoxTexture_nanys")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ProgressBarBG" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/EnergyControl"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_ffnjg")
theme_override_styles/fill = SubResource("StyleBoxTexture_j4jm5")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/EnergyControl"]
texture_filter = 3
material = SubResource("ShaderMaterial_65wfi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_qd2a2")
theme_override_styles/fill = SubResource("StyleBoxTexture_x8e1k")
value = 100.0
show_percentage = false
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
libraries = {
&"": SubResource("AnimationLibrary_kohvm")
}

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 3
layout_mode = 2
text = "Lv. 99"
label_settings = ExtResource("5_3n3nu")
vertical_alignment = 1
uppercase = true

[node name="PlayerStatusEffectListUI" parent="MarginContainer/VBoxContainer" instance=ExtResource("6_squ0m")]
layout_mode = 2
